# AM2315-RP2040-PICO

./: CMakeLists.txt  README.md  example.c
Drivers/: CMakeLists.txt
Drivers/am2315/: CMakeLists.txt  am2315.c
Drivers/am2315/include/: am2315.h
